# dasheng-lm

./: .gitignore  LICENSE  README.md  index.md  requirements.txt
data/audio/: 39oK7RKDMQE_3_5600000000000005_13_56.flac  HDlbAuqr10A_85_0345_95_0345.flac  HelMeXcLA9A_34_272549999999995_44_2725.flac  UyVwZCyEufY_45_44_55_44.flac  eQ0ohbOsZ2Y_252_66000000000003_262_66.flac  eZNWN8wueV8_21_4264_31_4264.flac  elPijwMmVsY_14_753050000000002_24_7531.flac  fiNsI10rlws_213_467_223_467.flac  lqdBmAaxO78_219_90800000000002_229_908.flac  lrMKnLcOHvk_344_3665_354_366.flac  mqTYKiVuEnU_43_33335_53_3334.flac
evaluate/: compute_at_acc.py  compute_fense.py  compute_gender_acc.py  compute_map.py  compute_qa_acc.py  prompt.csv
evaluate/fense/: data.py  download_utils.py  evaluator.py  model.py
evaluate/jsonl/: MiDashengLM_AutoACD.jsonl  MiDashengLM_FSD50K.jsonl  MiDashengLM_LibriSpeech_test-clean.jsonl  MiDashengLM_MuChoMusic.jsonl  MiDashengLM_MusicQA.jsonl  MiDashengLM_NSynth.jsonl  MiDashengLM_VoxCeleb-Gender.jsonl
evaluate/wer/: cn_tn.py  compute_wer.py  evaluate_tokenizer.py
evaluate/wer/whisper_normalizer/: basic.py
fig/: convert_pdfs_to_pngs.sh
mdl-toolkit/: .gitignore  README.md  README_zh.md  pyproject.toml
mdl-toolkit/docs_en/: cli.md  distributed.md  esc-50.ipynb  installation.md
mdl-toolkit/docs_zh/: cli.md  distributed.md  esc-50.ipynb  installation.md
mdl-toolkit/mdl_toolkit/: cli.py  conversation.py  convert_dataset.py  inference.py  train.py
